fh框架最终版

--- a/src/main/webapp/staticfile/css/style.css
+++ b/src/main/webapp/staticfile/css/style.css
@@ -198,7 +198,7 @@ ul#nav li:hover li{
 	float:none;
 }
 ul#nav li li a{
-	background:url(images/navitem.png) right center;
+	background:url(../images/navitem.png) right center;
 	display:block;
 	width:130px;
 	transition: background 0.3s, color 0.3s;
@@ -312,13 +312,13 @@ Content - Universal
 .quote,
 .quote-w,
 .lb-quote{
-	background:url(images/quote.png) no-repeat top left;
+	background:url(../images/quote.png) no-repeat top left;
 	padding:10px 0 30px 50px;
 	font-size:1.8em;
 	font-style:italic;
 }
 .quote-w{
-	background:url(images/quote-w.png) no-repeat top left;
+	background:url(../images/quote-w.png) no-repeat top left;
 }
 .quote-author{
 	text-align:right;
@@ -352,7 +352,7 @@ article ul li{
 .enlarge{
 	width:100%;
 	height:100%;
-	background:url(images/bloglistbg.png) repeat;
+	background:url(../images/bloglistbg.png) repeat;
 	position:absolute;
 	top:0;
 	left:0;
@@ -364,7 +364,7 @@ article ul li{
 	filter:alpha(opacity=0);	
 }
 .enlargeicon{
-	background:url(images/enlarge.png) no-repeat center;
+	background:url(../images/enlarge.png) no-repeat center;
 	width:100%;
 	height:100%;
 }
@@ -744,25 +744,25 @@ div.hl3{
 	font-size:1.2em;
 }
 .infobox-red{
-	background:url(images/info-red.png) no-repeat #cc0033;
+	background:url(../images/info-red.png) no-repeat #cc0033;
 }
 .infobox-red .infobox-msg{
 	color:#fff;
 }
 .infobox-yellow{
-	background:url(images/info-yellow.png) no-repeat #ffff66;
+	background:url(../images/info-yellow.png) no-repeat #ffff66;
 }
 .infobox-yellow .infobox-msg{
 	color:#505020;
 }
 .infobox-green{
-	background:url(images/info-green.png) no-repeat #c4fc1e;
+	background:url(../images/info-green.png) no-repeat #c4fc1e;
 }
 .infobox-green .infobox-msg{
 	color:#3d4f09;
 }
 .infobox-blue{
-	background:url(images/info-blue.png) no-repeat #1300cc;
+	background:url(../images/info-blue.png) no-repeat #1300cc;
 }
 .infobox-blue .infobox-msg{
 	color:#fff;
@@ -1058,7 +1058,7 @@ Content - Bloglist and Portfoliolist(Left)
 	width:100%;
 	height:100%;
 	position:absolute;
-	background:url(images/bloglistbg.png) repeat;
+	background:url(../images/bloglistbg.png) repeat;
 	display:table;
 	transition:opacity 0.3s;
 	-moz-transition:opacity 0.3s;
@@ -1627,7 +1627,7 @@ Content - Contact Page
 	background:#000;
 }
 .gmap{
-	background:url(images/gmap.png) no-repeat center;
+	background:url(../images/gmap.png) no-repeat center;
 	opacity:0.5;
 	filter:alpha(opacity=50);
 	cursor:pointer;
@@ -1669,7 +1669,7 @@ Content - Contact Page
 	width:80px;
 	height:80px;
 	margin:0 10px 10px 0;
-	background:url(images/social.png) no-repeat;
+	background:url(../images/social.png) no-repeat;
 	float:left;
 	transition:background 0.3s;
 	-moz-transition:background 0.3s;
@@ -2011,7 +2011,7 @@ Sidebar
 	color:#fff;
 }
 #search-submit{
-	background:url(images/search.png) center center no-repeat #404040;
+	background:url(../images/search.png) center center no-repeat #404040;
 	height:30px;
 	width:30px;
 	position:absolute;
@@ -2070,7 +2070,7 @@ Sidebar
 	text-decoration:underline;
 }
 .comment-widget .comment-quick-reply{
-	background:url(images/comment-widget.png) no-repeat;
+	background:url(../images/comment-widget.png) no-repeat;
 	width:45px;
 	height:30px;
 	line-height:28px;
@@ -2157,7 +2157,7 @@ Sidebar
 .articles-widget .more{
 	display:block;
 	position:absolute;
-	background:url(images/more.png) no-repeat;
+	background:url(../images/more.png) no-repeat;
 	width:25px;
 	height:25px;
 	bottom:10px;
@@ -2227,7 +2227,7 @@ table, td, td{
 	font-size:0.93em;
 }
 .widget #tweeter li{
-	background:url(images/twtr-widget.png) no-repeat top left;
+	background:url(../images/twtr-widget.png) no-repeat top left;
 	padding:0 20px 20px 30px;
 	margin:0;
 	list-style:none;
@@ -2934,7 +2934,7 @@ article ul.flex-direction-nav{height:0;}
 	line-height:1.4em;
 }
 /* Direction Nav */
-.flex-direction-nav a {width: 30px; height: 40px; margin: -20px 0 0; display: block; background: url(images/bg_direction_nav.png) no-repeat 0 0; position: absolute; top: 50%; cursor: pointer; text-indent: -9999px; opacity: 0; -webkit-transition: all .3s ease;}
+.flex-direction-nav a {width: 30px; height: 40px; margin: -20px 0 0; display: block; background: url(../images/bg_direction_nav.png) no-repeat 0 0; position: absolute; top: 50%; cursor: pointer; text-indent: -9999px; opacity: 0; -webkit-transition: all .3s ease;}
 .flex-direction-nav .flex-next {background-position: 100% 0; right: -36px; }
 .flex-direction-nav .flex-prev {left: -36px;}
 .flexslider:hover .flex-next {opacity: 0.8; right: 5px;}
